--- a/_publications/f3m-2022.md
+++ b/_publications/f3m-2022.md
@@ -5,6 +5,6 @@ authors: Robert Hu, Siu Lun Chau, Dino Sejdinovic, Joan Alexis Glaunès
 venue: Conference on Neural Information Processing Systems (NeurIPS)
 year: 2022
 pdf: https://arxiv.org/pdf/2202.01085.pdf
-code:
+code: https://anonymous.4open.science/r/F3M-7850/readme.md
 doi: 
 ---
