--- a/_publications/dme-2021.md
+++ b/_publications/dme-2021.md
@@ -5,6 +5,6 @@ authors: <ins>Siu Lun Chau*</ins>, Shahine Bouabid*, Dino Sejdinovic
 venue: Conference on Neural Information Processing Systems (NeurIPS)
 year: 2021
 pdf: https://arxiv.org/pdf/2305.15167.pdf
-code:
+code: https://github.com/shahineb/deconditional-downscaling
 doi:
 ---
