remove unused css files

--- a/_publications/f3m-2022.md
+++ b/_publications/f3m-2022.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Giga-scale Kernel Matrix Vector Multiplication on GPU"
-authors: Robert Hu, Siu Lun Chau, Dino Sejdinovic, Joan Alexis Glaunès
+authors: Robert Hu, <ins>Siu Lun Chau</ins>, Dino Sejdinovic, Joan Alexis Glaunès
 venue: Conference on Neural Information Processing Systems (NeurIPS)
 year: 2022
 pdf: https://arxiv.org/pdf/2202.01085.pdf
