experience tab is finished!

--- a/_publications/gdu-2023.md
+++ b/_publications/gdu-2023.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Gated Domain Units for Multi-source Domain Generalization"
-authors: Simon Föll*, Alina Dubatovka*, Eugen Ernst†, <ins>Siu Lun Chau</ins>†, Martin Maritsch, Patrik Okanovic, Gudrun Thäter, Joachim M Buhmann, Felix Wortmann,Krikamol Muandet (*,† equal contributions)
+authors: Simon Föll*, Alina Dubatovka*, Eugen Ernst†, <ins>Siu Lun Chau</ins>†, Martin Maritsch, Patrik Okanovic, Gudrun Thäter, Joachim M Buhmann, Felix Wortmann,Krikamol Muandet
 venue: Preprint
 year: 2023
 pdf: https://arxiv.org/pdf/2206.12444.pdf
