included talks, links to papers' video

--- a/_publications/dme-2021.md
+++ b/_publications/dme-2021.md
@@ -6,5 +6,5 @@ venue: Conference on Neural Information Processing Systems (NeurIPS)
 year: 2021
 pdf: https://arxiv.org/pdf/2305.15167.pdf
 code: https://github.com/shahineb/deconditional-downscaling
-doi:
+video: https://slideslive.com/38967430/deconditional-downscaling-with-gaussian-processes?ref=recommended
 ---
