--- a/_publications/dme-2021.md
+++ b/_publications/dme-2021.md
@@ -7,4 +7,5 @@ year: 2021
 pdf: https://arxiv.org/pdf/2305.15167.pdf
 code: https://github.com/shahineb/deconditional-downscaling
 video: https://slideslive.com/38967430/deconditional-downscaling-with-gaussian-processes?ref=recommended
+preprint: "false"
 ---
