--- a/_publications/gdu-2023.md
+++ b/_publications/gdu-2023.md
@@ -6,5 +6,6 @@ venue: Transactions on Machine Learning Research (TMLR)
 year: 2023
 pdf: https://arxiv.org/pdf/2206.12444.pdf
 code: https://github.com/im-ethz/pub-gdu4dg
-doi: 
+doi:
+preprint: "false"
 ---
