--- a/_publications/f3m-2022.md
+++ b/_publications/f3m-2022.md
@@ -7,4 +7,5 @@ year: 2022
 pdf: https://arxiv.org/pdf/2202.01085.pdf
 code: https://anonymous.4open.science/r/F3M-7850/readme.md
 doi: 
+preprint: "false"
 ---
