--- a/_news/2023-09-ETH.md
+++ b/_news/2023-09-ETH.md
@@ -1,5 +1,5 @@
 ---
 layout: default
 date: 2023-09-26
-blob: "I will be talking about my research at the ETH AI Center and D-MTEC 🇨🇭"
+blob: "I presented my research at the ETH AI Center and D-MTEC 🇨🇭"
 ---
