--- a/_news/2023-09-Oxford.md
+++ b/_news/2023-09-Oxford.md
@@ -1,5 +1,5 @@
 ---
 layout: default
 date: 2023-09-22
-blob: "I will be talking about my research at the Oxford Man Institute 🇬🇧"
+blob: "I presented about my research at the Oxford Man Institute 🇬🇧"
 ---
