--- a/_publications/csl-2023.md
+++ b/_publications/csl-2023.md
@@ -5,7 +5,7 @@ authors: Kiet QH Vo, Muneeb Aadil, <ins>Siu Lun Chau</ins>, Krikamol Muandet
 venue: Preprint
 year: 2023
 pdf: https://arxiv.org/pdf/2308.16262.pdf
-code: 
+code: https://github.com/muandet-lab/causal-strategic-learning-with-selection
 video:
 preprint: "true"
 ---
