--- a/_news/2023-03-01-postdoc.md
+++ b/_news/2023-03-01-postdoc.md
@@ -1,5 +1,5 @@
 ---
 layout: default
 date: 2023-03-01
-blob: "I have started my postdoc at CISPA! 👨🏻‍"
 ---
+I have started my postdoc at CISPA! 👨🏻‍
