--- a/_news/2023-08-23-GDU.md
+++ b/_news/2023-08-23-GDU.md
@@ -1,5 +1,5 @@
 ---
 layout: default
 date: 2023-09-22
-blob: "Our paper “Gated Domain Units for Multi-source Domain Generalization” has been accepted for publication in Transactions on Machine Learning Research (TMLR)."
 ---
+Our paper [“Gated Domain Units for Multi-source Domain Generalization”](https://arxiv.org/pdf/2206.12444.pdf) has been accepted for publication in Transactions on Machine Learning Research (TMLR).
