adding tabs for publications

--- a/_publications/dme-2021.md
+++ b/_publications/dme-2021.md
@@ -3,6 +3,7 @@ layout: default
 title: "Deconditional Downscaling with Gaussian Processes"
 authors: <ins>Siu Lun Chau*</ins>, Shahine Bouabid*, Dino Sejdinovic 
 venue: Conference on Neural Information Processing Systems (NeurIPS)
+venue_short: NeurIPS
 year: 2021
 pdf: https://arxiv.org/pdf/2305.15167.pdf
 code: https://github.com/shahineb/deconditional-downscaling
