--- a/_publications/csl-2023.md
+++ b/_publications/csl-2023.md
@@ -3,6 +3,7 @@ layout: default
 title: "Causal Strategic Learning with Competitive Selection"
 authors: Kiet QH Vo, Muneeb Aadil, <ins>Siu Lun Chau</ins>, Krikamol Muandet
 venue: Preprint
+venue_short: Preprint
 year: 2023
 pdf: https://arxiv.org/pdf/2308.16262.pdf
 code: https://github.com/muandet-lab/causal-strategic-learning-with-selection
