--- a/_publications/kgl-2021.md
+++ b/_publications/kgl-2021.md
@@ -3,6 +3,7 @@ layout: default
 title: "Kernel-based graph learning from smooth signals: A functional viewpoint"
 authors: Xingyue Pu, <ins>Siu Lun Chau</ins>, Xiaowen Dong, Dino Sejdinovic 
 venue: IEEE Transactions on Signal and Information Processing over Networks
+venue_short: IEEE
 year: 2021
 pdf: https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9356326
 code:
