--- a/_publications/2024-DGIL.md
+++ b/_publications/2024-DGIL.md
@@ -2,7 +2,7 @@
 layout: default
 title: "Domain Generalisation via Imprecise Learning"
 authors: Anurag Singh, <ins>Siu Lun Chau</ins>, Shahine Bouabid, Krikamol Muandet 
-venue: International Conference on Machine Learning (ICML)
+venue: (Spotlight) International Conference on Machine Learning (ICML)
 venue_short: ICML
 year: 2024
 pdf: https://arxiv.org/abs/2404.04669
