--- a/_publications/2023-gdu.md
+++ b/_publications/2023-gdu.md
@@ -10,4 +10,5 @@ code: https://github.com/im-ethz/pub-gdu4dg
 doi:
 preprint: "false"
 thumbnail: "../assets/img/publications/2023-GDU.png"
+UAI: true
 ---
