--- a/_publications/2022-f3m.md
+++ b/_publications/2022-f3m.md
@@ -10,4 +10,5 @@ code: https://anonymous.4open.science/r/F3M-7850/readme.md
 doi: 
 preprint: "false"
 thumbnail: "../assets/img/publications/2022-FM3.png"
+UAI: true
 ---
