--- a/_news/2025-01-26-AISTATS.md
+++ b/_news/2025-01-26-AISTATS.md
@@ -2,5 +2,5 @@
 layout: default
 date: 2025-01-25
 ---
-Our paper on the first ever [Credal Two-sample Testing](https://arxiv.org/pdf/2410.12921) has been accepted for publication in the International Conference on Artificial 
-Intelligence and Statistics (AISTATS 2025)! Many thanks to the amazing crowd of collaborators.  
+Our paper on the first ever [Credal Two-sample Testing](https://arxiv.org/pdf/2410.12921) has been accepted at AISTATS 2025! Many thanks 
+to the amazing crowd of collaborators.  
