changed a lot of things

--- a/_publications/2023-gdu.md
+++ b/_publications/2023-gdu.md
@@ -5,6 +5,7 @@ authors: Simon Föll*, Alina Dubatovka*, Eugen Ernst†, <ins>Siu Lun Chau</ins>
 venue: Transactions on Machine Learning Research
 venue_short: TMLR
 year: 2023
+pubtime: 2023
 pdf: https://arxiv.org/pdf/2206.12444.pdf
 code: https://github.com/im-ethz/pub-gdu4dg
 doi:
