--- a/_publications/2024-DGIL.md
+++ b/_publications/2024-DGIL.md
@@ -5,6 +5,7 @@ authors: Anurag Singh, <ins>Siu Lun Chau</ins>, Shahine Bouabid, Krikamol Muande
 venue: International Conference on Machine Learning (ICML)
 venue_short: ICML
 year: 2024
+pubtime: 2024
 pdf: https://arxiv.org/abs/2404.04669
 code: https://github.com/muandet-lab/dgil
 doi:
