--- a/_publications/2025-IIPM.md
+++ b/_publications/2025-IIPM.md
@@ -5,6 +5,7 @@ authors: <ins>Siu Lun Chau</ins>, Michele Caprio, Krikamol Muandet
 venue: Arxiv
 venue_short: Arxiv
 year: 2025
+pubtime: 2025-05-23
 pdf: https://arxiv.org/pdf/2505.16156 
 code: 
 doi:
