--- a/_publications/2025-KQD.md
+++ b/_publications/2025-KQD.md
@@ -5,6 +5,7 @@ authors: Masha Naslidnyk, <ins>Siu Lun Chau</ins>, Francois-Xavier Briol, Krikam
 venue: International Conference on Machine Learning (ICML)
 venue_short: ICML
 year: 2025
+pubtime: 2025
 pdf: 
 code: 
 doi:
