--- a/_publications/2021-kgl.md
+++ b/_publications/2021-kgl.md
@@ -5,6 +5,7 @@ authors: Xingyue Pu, <ins>Siu Lun Chau</ins>, Xiaowen Dong, Dino Sejdinovic
 venue: IEEE Transactions on Signal and Information Processing over Networks
 venue_short: IEEE
 year: 2021
+pbutime: 2021
 pdf: https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9356326
 code:
 doi:
