--- a/_publications/2022-f3m.md
+++ b/_publications/2022-f3m.md
@@ -5,6 +5,7 @@ authors: Robert Hu, <ins>Siu Lun Chau</ins>, Dino Sejdinovic, Joan Alexis Glaun√
 venue: Conference on Neural Information Processing Systems (NeurIPS)
 venue_short: NeruIPS
 year: 2022
+pubtime: 2022
 pdf: https://arxiv.org/pdf/2202.01085.pdf
 code: https://anonymous.4open.science/r/F3M-7850/readme.md
 doi: 
