--- a/_publications/2023-csl.md
+++ b/_publications/2023-csl.md
@@ -5,6 +5,7 @@ authors: Kiet QH Vo, Muneeb Aadil, <ins>Siu Lun Chau</ins>, Krikamol Muandet
 venue: The 38th Annual AAAI Conference on Artificial Intelligence (AAAI)
 venue_short: AAAI
 year: 2024
+pubtime: 2024
 pdf: https://arxiv.org/pdf/2308.16262.pdf
 code: https://github.com/muandet-lab/causal-strategic-learning-with-selection
 video:
