--- a/_news/2025-07-21-IJAR.md
+++ b/_news/2025-07-21-IJAR.md
@@ -3,5 +3,5 @@ layout: default
 date: 2025-07-20    
 ---
 
-Honoured to receive the IJAR Young Researcher Award at ISIPTA 2025, a milestone recognising our efforts at the intersection of imprecise 
-probability and machine learning!
+Honoured to receive the IJAR Young Researcher Award (First Prize) at ISIPTA 2025, a milestone recognising our efforts at the 
+intersection of imprecise probability and machine learning!
