--- a/_publications/2025-IIPM.md
+++ b/_publications/2025-IIPM.md
@@ -2,8 +2,8 @@
 layout: default
 title: "Integral Imprecise Probability Metrics"
 authors: <ins>Siu Lun Chau</ins>, Michele Caprio, Krikamol Muandet
-venue: Arxiv
-venue_short: Arxiv
+venue: Conference on Neural Information Processing Systems (NeurIPS)
+venue_short: NeurIPS
 year: 2025
 pubtime: 2025-05-23
 pdf: https://arxiv.org/pdf/2505.16156 
